--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,10 @@
 {
   "id": "emoji-selector",
   "name": "Emoji Selector",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "minAppVersion": "1.1.0",
   "description": "Insert emojis from custom collections with fast search and HTML img tag conversion.",
   "author": "summer",
-  "authorUrl": "flyalready.com",
-
+  "authorUrl": "https://flyalready.com",
   "isDesktopOnly": false
 }
