--- a/manifest.json
+++ b/manifest.json
@@ -2,8 +2,8 @@
   "id": "emoji-selector",
   "name": "Emoji Selector",
   "version": "1.2.0",
-  "minAppVersion": "1.1.0",
-  "description": "Insert emojis from custom collections with fast search and HTML img tag conversion.",
+  "minAppVersion": "0.15.0",
+  "description": "Insert custom emojis from OWO format collections with quick search, auto-suggestions, and customizable templates.",
   "author": "summer",
   "authorUrl": "https://flyalready.com",
   "isDesktopOnly": false
