--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "name": "Emoji selector",
   "version": "1.2.4",
   "minAppVersion": "0.15.0",
-  "description": "Insert custom emojis from OWO format collections with quick search, auto-suggestions, and customizable templates.",
+  "description": "Insert custom emojis with quick search, auto-suggestions, and customizable templates.",
   "author": "summer",
   "authorUrl": "https://flyalready.com",
   "isDesktopOnly": false
